--- a/VkApplication/Base.lproj/Main.storyboard
+++ b/VkApplication/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="amq-Fo-G1E">
-                                <rect key="frame" x="127.5" y="293.5" width="120" height="80"/>
+                                <rect key="frame" x="127" y="293" width="120" height="80"/>
                                 <color key="backgroundColor" red="0.22535534072939664" green="0.36766291303514731" blue="0.69674016497461921" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="120" id="HD8-rb-8E7"/>
@@ -30,7 +30,7 @@
                                     <color key="titleColor" red="0.97647058819999999" green="0.97647058819999999" blue="0.97647058819999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="vxR-Q7-NFG" kind="showDetail" id="Ifj-C7-Z8E"/>
+                                    <segue destination="i0i-LR-G6h" kind="showDetail" id="Ifj-C7-Z8E"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -46,20 +46,66 @@
             </objects>
             <point key="canvasLocation" x="32.799999999999997" y="41.829085457271368"/>
         </scene>
-        <!--View Controller-->
+        <!--VkStatic-->
         <scene sceneID="DBm-AZ-8Z1">
             <objects>
                 <viewController id="vxR-Q7-NFG" customClass="ViewController" customModule="VkApplication" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="C1I-Qg-9t5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name and Surname" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sf1-B7-0zv">
+                                <rect key="frame" x="107" y="98" width="161" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="161" id="zZf-jW-4bu"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
+                                <color key="textColor" red="0.95700777331253306" green="0.99435032351145325" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="M6q-ia-eVv">
+                                <rect key="frame" x="165" y="127" width="45" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="Vl5-jn-t3i"/>
+                                    <constraint firstAttribute="width" constant="45" id="raR-fX-4Os"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.22298878256646346" green="0.36380191881493079" blue="0.68942338197969544" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="sf1-B7-0zv" firstAttribute="top" secondItem="YXe-mg-0x6" secondAttribute="top" constant="34" id="KkJ-uL-4pE"/>
+                            <constraint firstItem="M6q-ia-eVv" firstAttribute="centerX" secondItem="C1I-Qg-9t5" secondAttribute="centerX" id="LTI-UY-qu5"/>
+                            <constraint firstItem="M6q-ia-eVv" firstAttribute="top" secondItem="sf1-B7-0zv" secondAttribute="bottom" constant="8" id="QJt-Ia-rZh"/>
+                            <constraint firstItem="sf1-B7-0zv" firstAttribute="centerX" secondItem="C1I-Qg-9t5" secondAttribute="centerX" id="VAc-UW-d4b"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="YXe-mg-0x6"/>
                     </view>
+                    <navigationItem key="navigationItem" title="VkStatic" id="OBE-WZ-hzE"/>
+                    <connections>
+                        <outlet property="userName" destination="sf1-B7-0zv" id="OWT-Xy-J9Y"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hNf-vE-9GC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="927" y="42"/>
+            <point key="canvasLocation" x="1864.8" y="41.829085457271368"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="c23-eA-wjE">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="i0i-LR-G6h" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="odf-Gq-LcU">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vxR-Q7-NFG" kind="relationship" relationship="rootViewController" id="cTu-YF-dPI"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jPU-Gc-vV5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="925.60000000000002" y="41.829085457271368"/>
         </scene>
     </scenes>
 </document>
