--- a/VkApplication/Base.lproj/Main.storyboard
+++ b/VkApplication/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,13 +14,13 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="VkApplication" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="amq-Fo-G1E">
-                                <rect key="frame" x="127" y="293" width="120" height="80"/>
+                                <rect key="frame" x="127.5" y="293.5" width="120" height="80"/>
                                 <color key="backgroundColor" red="0.22535534072939664" green="0.36766291303514731" blue="0.69674016497461921" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="120" id="HD8-rb-8E7"/>
@@ -30,11 +31,11 @@
                                     <color key="titleColor" red="0.97647058819999999" green="0.97647058819999999" blue="0.97647058819999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="i0i-LR-G6h" kind="showDetail" id="Ifj-C7-Z8E"/>
+                                    <action selector="signIn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9ku-TQ-nOw"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.73414605912001463" green="0.8617616009667165" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="amq-Fo-G1E" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VxJ-s3-hnY"/>
                             <constraint firstItem="amq-Fo-G1E" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="bCu-r6-JPP"/>
@@ -49,45 +50,78 @@
         <!--VkStatic-->
         <scene sceneID="DBm-AZ-8Z1">
             <objects>
-                <viewController id="vxR-Q7-NFG" customClass="ViewController" customModule="VkApplication" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vxR-Q7-NFG" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="C1I-Qg-9t5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name and Surname" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sf1-B7-0zv">
-                                <rect key="frame" x="107" y="98" width="161" height="21"/>
+                                <rect key="frame" x="102.5" y="168" width="170" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="161" id="zZf-jW-4bu"/>
+                                    <constraint firstAttribute="height" constant="21" id="3bF-lX-twa"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="170" id="Hb6-dc-8JA"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                 <color key="textColor" red="0.95700777331253306" green="0.99435032351145325" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="M6q-ia-eVv">
-                                <rect key="frame" x="165" y="127" width="45" height="45"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="M6q-ia-eVv">
+                                <rect key="frame" x="165" y="102" width="45" height="45"/>
+                                <color key="backgroundColor" red="0.0" green="0.31620826567917693" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="45" id="Vl5-jn-t3i"/>
-                                    <constraint firstAttribute="width" constant="45" id="raR-fX-4Os"/>
+                                    <constraint firstAttribute="width" constant="45" id="Kwk-2q-oi5"/>
+                                    <constraint firstAttribute="height" constant="45" id="hgf-Ak-RNY"/>
                                 </constraints>
                             </imageView>
+                            <tableView clipsSubviews="YES" alpha="0.5" contentMode="scaleAspectFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kCx-dw-Kwz">
+                                <rect key="frame" x="16" y="214" width="341.5" height="356"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="2CL-Lg-NRm">
+                                        <rect key="frame" x="0.0" y="28" width="341.5" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2CL-Lg-NRm" id="PRg-tD-Pss">
+                                            <rect key="frame" x="0.0" y="0.0" width="341.5" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9RB-uc-kQm">
+                                <rect key="frame" x="154.5" y="614" width="66" height="33"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="33" id="hWQ-6A-nPd"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
+                                <state key="normal" title="Log Out">
+                                    <color key="titleColor" red="1" green="0.046772837529804212" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="exitVkAccount:" destination="vxR-Q7-NFG" eventType="touchUpInside" id="rXV-La-GzR"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.22298878256646346" green="0.36380191881493079" blue="0.68942338197969544" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="sf1-B7-0zv" firstAttribute="top" secondItem="YXe-mg-0x6" secondAttribute="top" constant="34" id="KkJ-uL-4pE"/>
-                            <constraint firstItem="M6q-ia-eVv" firstAttribute="centerX" secondItem="C1I-Qg-9t5" secondAttribute="centerX" id="LTI-UY-qu5"/>
-                            <constraint firstItem="M6q-ia-eVv" firstAttribute="top" secondItem="sf1-B7-0zv" secondAttribute="bottom" constant="8" id="QJt-Ia-rZh"/>
-                            <constraint firstItem="sf1-B7-0zv" firstAttribute="centerX" secondItem="C1I-Qg-9t5" secondAttribute="centerX" id="VAc-UW-d4b"/>
+                            <constraint firstItem="kCx-dw-Kwz" firstAttribute="centerX" secondItem="sf1-B7-0zv" secondAttribute="centerX" id="1hq-fM-7x7"/>
+                            <constraint firstItem="M6q-ia-eVv" firstAttribute="centerX" secondItem="C1I-Qg-9t5" secondAttribute="centerX" id="2Jf-BQ-41O"/>
+                            <constraint firstItem="sf1-B7-0zv" firstAttribute="top" secondItem="M6q-ia-eVv" secondAttribute="bottom" constant="21" id="G4E-gg-MSs"/>
+                            <constraint firstItem="kCx-dw-Kwz" firstAttribute="leading" secondItem="C1I-Qg-9t5" secondAttribute="leadingMargin" id="KPC-ET-h2j"/>
+                            <constraint firstItem="9RB-uc-kQm" firstAttribute="top" secondItem="kCx-dw-Kwz" secondAttribute="bottom" constant="44" id="dVB-HC-1Aw"/>
+                            <constraint firstItem="sf1-B7-0zv" firstAttribute="centerX" secondItem="C1I-Qg-9t5" secondAttribute="centerX" id="dkh-jS-Tn3"/>
+                            <constraint firstItem="M6q-ia-eVv" firstAttribute="top" secondItem="YXe-mg-0x6" secondAttribute="top" constant="38" id="nuL-cB-WVX"/>
+                            <constraint firstItem="kCx-dw-Kwz" firstAttribute="top" secondItem="sf1-B7-0zv" secondAttribute="bottom" constant="25" id="prP-QO-BF6"/>
+                            <constraint firstItem="9RB-uc-kQm" firstAttribute="centerX" secondItem="C1I-Qg-9t5" secondAttribute="centerX" id="sRt-BK-dPe"/>
+                            <constraint firstItem="YXe-mg-0x6" firstAttribute="bottom" secondItem="9RB-uc-kQm" secondAttribute="bottom" constant="20" id="xQv-mb-IeY"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="YXe-mg-0x6"/>
                     </view>
                     <navigationItem key="navigationItem" title="VkStatic" id="OBE-WZ-hzE"/>
-                    <connections>
-                        <outlet property="userName" destination="sf1-B7-0zv" id="OWT-Xy-J9Y"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hNf-vE-9GC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1864.8" y="41.829085457271368"/>
+            <point key="canvasLocation" x="2281" y="42"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="c23-eA-wjE">
