--- a/VkApplication/Base.lproj/Main.storyboard
+++ b/VkApplication/Base.lproj/Main.storyboard
@@ -19,12 +19,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="amq-Fo-G1E">
-                                <rect key="frame" x="127.5" y="293.5" width="120" height="80"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BackgroundImage" translatesAutoresizingMaskIntoConstraints="NO" id="hcF-cY-YNk">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xbq-a5-Bsr">
+                                <rect key="frame" x="167" y="104" width="42" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="GNZ-Ng-h1j"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="42" id="HFC-nC-Q7u"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rBc-tz-PQ6">
+                                <rect key="frame" x="166" y="566" width="44" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="UwJ-qu-HMf"/>
+                                    <constraint firstAttribute="width" constant="44" id="aqd-YV-t4B"/>
+                                </constraints>
+                                <state key="normal" backgroundImage="linkedinLogo"/>
+                                <connections>
+                                    <action selector="EnterLinkedinAccount:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ds5-SL-CKE"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="amq-Fo-G1E">
+                                <rect key="frame" x="62" y="304" width="250" height="58"/>
                                 <color key="backgroundColor" red="0.22535534072939664" green="0.36766291303514731" blue="0.69674016497461921" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="120" id="HD8-rb-8E7"/>
-                                    <constraint firstAttribute="height" constant="80" id="U5c-3p-mue"/>
+                                    <constraint firstAttribute="height" constant="58" id="Gde-bj-kve"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                 <state key="normal" title="Sign In">
@@ -37,11 +60,28 @@
                         </subviews>
                         <color key="backgroundColor" red="0.73414605912001463" green="0.8617616009667165" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="amq-Fo-G1E" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VxJ-s3-hnY"/>
-                            <constraint firstItem="amq-Fo-G1E" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="bCu-r6-JPP"/>
+                            <constraint firstItem="amq-Fo-G1E" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="62" id="4QB-o4-WWh"/>
+                            <constraint firstItem="amq-Fo-G1E" firstAttribute="centerX" secondItem="Xbq-a5-Bsr" secondAttribute="centerX" constant="-1" id="8d5-8f-WbR"/>
+                            <constraint firstItem="rBc-tz-PQ6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="W2j-FN-L5m"/>
+                            <constraint firstItem="hcF-cY-YNk" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="agg-2x-KHs"/>
+                            <constraint firstItem="Xbq-a5-Bsr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="84" id="e5R-y1-JQl"/>
+                            <constraint firstItem="hcF-cY-YNk" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" id="eUp-Ff-0vb"/>
+                            <constraint firstItem="Xbq-a5-Bsr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="f8I-4a-0mY"/>
+                            <constraint firstItem="hcF-cY-YNk" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="kB1-ME-mYG"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="hcF-cY-YNk" secondAttribute="top" constant="20" id="kOU-0k-XuI"/>
+                            <constraint firstItem="amq-Fo-G1E" firstAttribute="centerY" secondItem="hcF-cY-YNk" secondAttribute="centerY" constant="-0.5" id="mrd-CM-lFF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hcF-cY-YNk" secondAttribute="trailing" id="onb-3R-B1g"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="rBc-tz-PQ6" secondAttribute="bottom" constant="57" id="qTc-g6-b97"/>
+                            <constraint firstAttribute="bottom" secondItem="hcF-cY-YNk" secondAttribute="bottom" id="vwl-uT-clx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="linkedinButton" destination="rBc-tz-PQ6" id="9lR-MV-XfB"/>
+                        <outlet property="signInButton" destination="amq-Fo-G1E" id="tg3-mO-QLU"/>
+                        <outlet property="userName" destination="Xbq-a5-Bsr" id="l7W-dj-ETL"/>
+                        <segue destination="i0i-LR-G6h" kind="showDetail" identifier="Transfer" id="g6j-GH-YoI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -50,12 +90,12 @@
         <!--VkStatic-->
         <scene sceneID="DBm-AZ-8Z1">
             <objects>
-                <viewController id="vxR-Q7-NFG" sceneMemberID="viewController">
+                <viewController id="vxR-Q7-NFG" customClass="VkStatisticsViewController" customModule="VkApplication" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="C1I-Qg-9t5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name and Surname" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sf1-B7-0zv">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name and Surname" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sf1-B7-0zv">
                                 <rect key="frame" x="102.5" y="168" width="170" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="3bF-lX-twa"/>
@@ -74,31 +114,35 @@
                                 </constraints>
                             </imageView>
                             <tableView clipsSubviews="YES" alpha="0.5" contentMode="scaleAspectFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kCx-dw-Kwz">
-                                <rect key="frame" x="16" y="214" width="341.5" height="356"/>
+                                <rect key="frame" x="16" y="214" width="342" height="356"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="2CL-Lg-NRm">
-                                        <rect key="frame" x="0.0" y="28" width="341.5" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="2CL-Lg-NRm">
+                                        <rect key="frame" x="0.0" y="28" width="342" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2CL-Lg-NRm" id="PRg-tD-Pss">
-                                            <rect key="frame" x="0.0" y="0.0" width="341.5" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="vxR-Q7-NFG" id="xLN-xb-aGu"/>
+                                    <outlet property="delegate" destination="vxR-Q7-NFG" id="fR4-bT-qAO"/>
+                                </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9RB-uc-kQm">
-                                <rect key="frame" x="154.5" y="614" width="66" height="33"/>
+                                <rect key="frame" x="108" y="594" width="170" height="53"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="33" id="hWQ-6A-nPd"/>
+                                    <constraint firstAttribute="height" constant="53" id="3sC-Td-QFc"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                 <state key="normal" title="Log Out">
                                     <color key="titleColor" red="1" green="0.046772837529804212" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="exitVkAccount:" destination="vxR-Q7-NFG" eventType="touchUpInside" id="rXV-La-GzR"/>
+                                    <action selector="logOut:" destination="vxR-Q7-NFG" eventType="touchUpInside" id="V2S-5q-xa5"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -106,22 +150,29 @@
                         <constraints>
                             <constraint firstItem="kCx-dw-Kwz" firstAttribute="centerX" secondItem="sf1-B7-0zv" secondAttribute="centerX" id="1hq-fM-7x7"/>
                             <constraint firstItem="M6q-ia-eVv" firstAttribute="centerX" secondItem="C1I-Qg-9t5" secondAttribute="centerX" id="2Jf-BQ-41O"/>
+                            <constraint firstItem="9RB-uc-kQm" firstAttribute="top" secondItem="kCx-dw-Kwz" secondAttribute="bottom" constant="24" id="ALN-9c-JGH"/>
                             <constraint firstItem="sf1-B7-0zv" firstAttribute="top" secondItem="M6q-ia-eVv" secondAttribute="bottom" constant="21" id="G4E-gg-MSs"/>
                             <constraint firstItem="kCx-dw-Kwz" firstAttribute="leading" secondItem="C1I-Qg-9t5" secondAttribute="leadingMargin" id="KPC-ET-h2j"/>
-                            <constraint firstItem="9RB-uc-kQm" firstAttribute="top" secondItem="kCx-dw-Kwz" secondAttribute="bottom" constant="44" id="dVB-HC-1Aw"/>
-                            <constraint firstItem="sf1-B7-0zv" firstAttribute="centerX" secondItem="C1I-Qg-9t5" secondAttribute="centerX" id="dkh-jS-Tn3"/>
+                            <constraint firstItem="9RB-uc-kQm" firstAttribute="leading" secondItem="YXe-mg-0x6" secondAttribute="leading" constant="108" id="Ols-Zh-xOo"/>
+                            <constraint firstItem="9RB-uc-kQm" firstAttribute="centerX" secondItem="kCx-dw-Kwz" secondAttribute="centerX" constant="6" id="Pa4-y2-8Xe"/>
+                            <constraint firstItem="sf1-B7-0zv" firstAttribute="centerX" secondItem="M6q-ia-eVv" secondAttribute="centerX" id="hHo-nJ-EgT"/>
                             <constraint firstItem="M6q-ia-eVv" firstAttribute="top" secondItem="YXe-mg-0x6" secondAttribute="top" constant="38" id="nuL-cB-WVX"/>
                             <constraint firstItem="kCx-dw-Kwz" firstAttribute="top" secondItem="sf1-B7-0zv" secondAttribute="bottom" constant="25" id="prP-QO-BF6"/>
-                            <constraint firstItem="9RB-uc-kQm" firstAttribute="centerX" secondItem="C1I-Qg-9t5" secondAttribute="centerX" id="sRt-BK-dPe"/>
-                            <constraint firstItem="YXe-mg-0x6" firstAttribute="bottom" secondItem="9RB-uc-kQm" secondAttribute="bottom" constant="20" id="xQv-mb-IeY"/>
+                            <constraint firstAttribute="bottom" secondItem="9RB-uc-kQm" secondAttribute="bottom" constant="20" symbolic="YES" id="wug-L7-GmZ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="YXe-mg-0x6"/>
                     </view>
                     <navigationItem key="navigationItem" title="VkStatic" id="OBE-WZ-hzE"/>
+                    <connections>
+                        <outlet property="logOut" destination="9RB-uc-kQm" id="odX-Y8-0T7"/>
+                        <outlet property="profilePhoto" destination="M6q-ia-eVv" id="TVK-xZ-4Yt"/>
+                        <outlet property="tableView" destination="kCx-dw-Kwz" id="Wol-EV-KrU"/>
+                        <outlet property="userNameAndSurname" destination="sf1-B7-0zv" id="Iw6-hE-0Fd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hNf-vE-9GC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2281" y="42"/>
+            <point key="canvasLocation" x="1882.5" y="40.140845070422536"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="c23-eA-wjE">
@@ -142,4 +193,8 @@
             <point key="canvasLocation" x="925.60000000000002" y="41.829085457271368"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="BackgroundImage" width="375" height="667"/>
+        <image name="linkedinLogo" width="44" height="44"/>
+    </resources>
 </document>
